# CrappyNotes_Client

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.cpp  version.h
inc/: request.h  version.h
src/: CmakeLists.txt  main.cpp  request.cpp  version.cpp
